# php-vio

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  Makefile.frag  Makefile.fragments  README.md  composer.json  config.m4  config.nice.bat  config.w32  configure.js  php-vio-design.md  php_vio.c  php_vio.dep  php_vio.h  php_vio_arginfo.h  vio.stub.php
examples/: phase1_window.php  phase2_triangle.php  phase2_white_triangle.php  phase3_input.php  phase4_custom_shader.php  phase5_2d.php
include/: vio_backend.h  vio_constants.h  vio_plugin.h  vio_types.h
src/: vio_2d.c  vio_2d.dep  vio_2d.h  vio_2d_d3d11.c  vio_2d_d3d11.h  vio_2d_d3d12.c  vio_2d_d3d12.h  vio_audio.c  vio_audio.dep  vio_audio.h  vio_backend_null.c  vio_backend_null.dep  vio_backend_null.h  vio_backend_registry.c  vio_backend_registry.dep  vio_backend_registry.h  vio_buffer.c  vio_buffer.dep  vio_buffer.h  vio_context.c  vio_context.dep  vio_context.h  vio_cubemap.c  vio_cubemap.dep  vio_cubemap.h  vio_font.c  vio_font.dep  vio_font.h  vio_input.c  vio_input.dep  vio_input.h  vio_mesh.c  vio_mesh.dep  vio_mesh.h  vio_pipeline.c  vio_pipeline.dep  vio_pipeline.h  vio_plugin_registry.c  vio_plugin_registry.dep  vio_recorder.c  (+26 more)
tests/: 001_extension_loaded.phpt  002_constants_defined.phpt  003_null_backend.phpt  004_context_errors.phpt  005_opengl_backend.phpt  006_input_functions.phpt  007_mouse_functions.phpt  008_input_callbacks.phpt  009_shader_pipeline.diff  009_shader_pipeline.exp  009_shader_pipeline.out  009_shader_pipeline.php  009_shader_pipeline.phpt  (+78 more)
(+29 files in other folders)
